feat: spring-boot 3.5 upgrade
Tracing correct spans
Correct maven wrapper (not used atm) for future usage
Pipeline use java 21 image for docker build
switch to logstash format
rename gateway spans contextualnames to match current naming
trailing slash handling + spotless apply
extended ObservationFilter with tests
correct RequestFilter handling of mutating + tests
tests covering query param hiding
test: add docker-compose file for local tracing testing
refactor: not recreating objectmapper again and again
minor cleanup and renaming + remove duplicat webflux starter dependency
Add redis to docker-compose.yml for local test
Make lazy redis pubsub init work with context propagation
Revert key loading just once
Switch to integrated structured logging
Ignore x-forwarded-* headers for routing see github ref
Enforce statelessness
tardis-traceid spamming metrics
switch to hardened community jre image + compose description
tracing adjustments reg propagation and baggage
configurable key location
Dockerfile.multi-stage with new community jre image
add blockhound to tests to fail on blocking calls

Refs: DHEI-17014 https://github.com/spring-cloud/spring-cloud-gateway/issues/3677

build: spring-boot 3.5 upgrade